# mr-rag

./: .clineignore  .dockerignore  .env.example  .gitignore  Dockerfile  FEATURES.md  PLAN.md  README.md  USAGE.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.agents/skills/mr-rag-01-architecture/: SKILL.md
.agents/skills/mr-rag-02-ports-and-adapters/: SKILL.md
.agents/skills/mr-rag-03-dependency-injection/: SKILL.md
.agents/skills/mr-rag-04-error-handling/: SKILL.md
.agents/skills/mr-rag-05-domain-models/: SKILL.md
.agents/skills/mr-rag-06-cache-strategy/: SKILL.md
.agents/skills/mr-rag-07-api-routes/: SKILL.md
app/: config.py  document_loader.py  embedding_service.py  ingestion_pipeline.py  llm_service.py  main.py  openrouter_embeddings.py  openrouter_llm.py  rag_pipeline.py  text_splitter.py  vector_store.py
app/api/: routes.py  schemas.py
app/core/: domain.py  exceptions.py  ports.py
app/infrastructure/: cache.py  chroma_vector_store.py  conversation_repository.py  document_loader.py  document_repository.py  openrouter_embedding.py  openrouter_llm.py  pdf_loader.py  text_splitter.py
app/pipeline/: ingestion.py  rag.py
app/scheduler/: auth.py  client.py  config.py  job.py  logger.py  runner.py
data/: conversations.db  document_metadata.db  recipes_1.json  recipes_2.json  scheduler_log.json
frontend/: AGENTS.md  CLAUDE.md  package.json  pnpm-lock.yaml
frontend/src/lib/: api.ts  (+1 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: cleanup_orphans.py
(+18 files in other folders)
