[project]
name = "mr-rag"
version = "0.1.0"
description = "AI RAG_PIPLINE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "jq>=1.11.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "schedule>=1.2.2",
]
